Cambio la portada (#63)

--- a/memoria/tex/titlepage.tex
+++ b/memoria/tex/titlepage.tex
@@ -1,10 +1,11 @@
 \begin{titlepage}
-    \hspace{-1.5cm}
-	\includegraphics[width=40mm]{img/LogoETSIIT.png}
-	\includegraphics[width=40mm]{img/LogoFacultadCiencias.jpeg}
+	%\hspace{-1cm}
+	\includegraphics[height=35mm]{img/LogoFacultadCiencias.png}
+	\includegraphics[height=35mm]{img/LogoETSIIT.png}
 	\hfill
-	\includegraphics[width=50mm]{img/LogoUGR.png}
-	
+	\includegraphics[height=35mm]{img/LogoUGR.png}
+	\hspace{1cm}
+	\begin{comment}
 	\noindent\begin{small} \sffamily
 		\begin{minipage}{0.65\textwidth}
 			Doble Grado en Ingeniería Informática y Matemáticas\\
@@ -13,32 +14,42 @@
 		\end{minipage}
 	\hrule
 	\end{small}
+\end{comment}
+
+\vspace{0.5cm}
+\hrule
+\vspace{1cm}
+{\Large\centering \textsc{Doble Grado en Ingeniería Informática y Matemáticas} \par}
+{\Large\centering \textsc{Trabajo de Fin de Grado} \par}
+
 
 	%Thesis title
 	\vspace{1cm}
-	{\LARGE\noindent \textbf{Fractales} \par}
+	{\Huge\centering \textbf{Fractales} \par}
 	\vspace{0.5cm}
 	%Thesis subtitle
-	{\Large\noindent Fundamentos matemáticos y visualización tridimensional con\linebreak Ray-Tracing \par}
+	{\LARGE\centering \textbf{Fundamentos matemáticos y visualización con Ray-Tracing} \par}
 	\vspace{2cm}
-	%Author's name
-	{\LARGE\noindent Autor: Juan Antonio Villegas Recio \par} 
+
+	\begin{table}[h!]
+			\begin{tabular}{p{0.35\textwidth}p{0.65\textwidth}}
+				{\LARGE Autor:} & {\LARGE Juan Antonio Villegas Recio} \\[1cm]
+				{\Large Tutor de Matemáticas:}    & {\Large Manuel Ruiz Galán} \\
+				& {\Large Departamento de Matemática Aplicada} \\ [0.5cm]
+				{\Large Tutor de Informática:}      & {\Large Carlos Ureña Almagro} \\
+				& {\Large Departamento de Lenguajes y Sistemas} \\
+				& {\Large Informáticos}
+			\end{tabular}
+	\end{table}
 	
 	\vfill
-		
+	{\Large\centering \textsc{Curso 2021--2022} \par}
+	{\Large\centering \textsc{Granada, a \today} \par}
+	\vspace{1cm}
+
 	\hrule
 	\vspace{0.3cm}
 	
-	\begin{table}[h!]
-		\begin{footnotesize} \sffamily
-			\begin{tabular}{p{0.21\textwidth}p{0.79\textwidth}}
-				Autor: & Juan Antonio Villegas Recio \\
-				Tutor de Matemáticas:    & Manuel Ruiz Galán, Catedrático de Universidad\\
-				& Departamento de Matemática Aplicada, Universidad de Granada \\
-				Tutor de Informática:      & Carlos Ureña Almagro, Profesor Titular de Universidad \\
-				& Departamento de Lenguajes y Sistemas Informáticos, Universidad de Granada
-			\end{tabular}
-		\end{footnotesize}
-	\end{table}
+	
 	
 \end{titlepage}
