Corregidas secciones introductorias (#68)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -95,9 +95,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % LISTA DE TABLAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\listoftables
-\thispagestyle{plain}
-\addcontentsline{toc}{chapter}{Lista de Tablas}
+% \listoftables
+% \thispagestyle{plain}
+% \addcontentsline{toc}{chapter}{Lista de Tablas}
 % \addtocontents{toc}{\bigskip}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
