--- a/memoria/tex/agradecimientos.tex
+++ b/memoria/tex/agradecimientos.tex
@@ -1,7 +1,7 @@
 \begin{flushleft}
-    \textit{A mis padres, Juan y Toñi, por hacer el gran esfuerzo que habéis hecho en estos cinco años para permitirme cumplir mi sueño de estudiar esta carrera lejos de casa. Todo lo que consiga en la vida y quién llegue a ser jamás habría sido posible sin vosotros. A mi hermano Marcos, mi hermano Óscar, por aprovechar vuestra experiencia y los años que nos llevamos para intentar siempre llevarme por el cauce adecuado. A mi cuñada Pilar, mis sobrinos Marcos David y Elsa y a toda mi familia por siempre confiar en mí, por apoyarme y hacerme disfrutar de cada momento que pasamos juntos.}
+    \textit{A mis padres, Juan y Toñi, por hacer el gran esfuerzo que habéis hecho en estos cinco años para permitirme cumplir mi sueño de estudiar esta carrera lejos de casa. Todo lo que consiga en la vida y quién llegue a ser jamás habría sido posible sin vosotros. A mi hermano Marcos y a mi hermano Óscar, por aprovechar vuestra experiencia y los años de diferencia para intentar siempre llevarme por el cauce adecuado. A mi cuñada Pilar, mis sobrinos Marcos David y Elsa y a toda mi familia por siempre confiar en mí, por apoyarme y hacerme disfrutar de cada momento que pasamos juntos.}
 
-    \textit{A mis amigos y amigas, por estar siempre a mi lado y acompañarme en el día a día de esta aventura. Gracias por animarme en los peores momentos, por compartir mis alegrías en los buenos y por soportarme cuando no podía aguantarme ni yo mismo. A mis compañeros de clase, por los momentos compartidos y por el esfuerzo que hemos hecho para llegar hasta donde estamos. De todo corazón os deseo el mejor futuro.}
+    \textit{A mis amigas y amigos, por estar siempre a mi lado y acompañarme en el día a día de esta aventura. Gracias por animarme en los peores momentos, por compartir mis alegrías en los buenos y por soportarme cuando no podía aguantarme ni yo mismo. A mis compañeras y compañeros de clase, por los momentos compartidos y por el esfuerzo que hemos hecho para llegar hasta donde estamos. De todo corazón os deseo el mejor futuro.}
 
     \textit{A mis tutores, Carlos y Manuel, por su disponibilidad durante todo este tiempo, por su eficacia a la hora de hacer reuniones, correcciones, contestar correos\dots No puedo pedir una mejor atención en el desarrollo de mi TFG que la que vosotros me habéis dado.}
 
