--- a/memoria/tex/lista-abreviaturas.tex
+++ b/memoria/tex/lista-abreviaturas.tex
@@ -3,11 +3,11 @@
 \item ALU: Arithmetic-Logic Unit (Unidad Aritmético-Lógica)
 \item API: Application Programming Interface (Interfaz de Programación de Aplicaciones)
 \item CPU: Central Processing Unit (Unidad Central de Procesamiento)
-\item DC: Device Coordinates (Coordenadas de dispositivo)
+\item DC: Device Coordinates (Coordenadas de Dispositivo)
 \item GPU: Graphics Processing Unit (Unidad de Procesamiento Gráfico)
 \item MIL: Modelo de Iluminación Local
 \item SDF: Signed Distance Function
 \item SFI: Sistema de Funciones Iteradas
 \item RT: Ray-Tracing
-\item WC: World Coordinates (Coordenadas de mundo)
+\item WC: World Coordinates (Coordenadas de Mundo)
 \end{itemize}
