--- a/memoria/tex/objetivos.tex
+++ b/memoria/tex/objetivos.tex
@@ -1,4 +1,4 @@
-Los objetivos iniciales de este trabajo son muy similares a los finalmente alcanzados. Muchos de ellos han sido alcanzados, mientras que algunos finalmente han tenido que ser descartados. 
+Los objetivos iniciales de este trabajo son muy similares a los finalmente alcanzados, aunque algunos finalmente han tenido que ser descartados. 
 
 En el ámbito de las matemáticas, el objetivo inicial consistía en realizar un estudio de los fundamentos básicos de la Geometría Fractal. Para ello, se realizaría una recopilación de algunos de los conceptos y resultados necesarios, insistiendo en la teoría de la medida y el teorema del punto fijo de Banach. Se desarrollarían los elementos esenciales de la Geometría Fractal, especialmente conceptos de dimensión, como la de Hausdorff, sistemas de funciones iteradas, autosimilitud o el teorema del collage. Finalmente, se presentarían diversas aplicaciones de la Geometría Fractal, especialmente vinculadas con la naturaleza.
 
@@ -15,3 +15,5 @@ En relación a los objetivos y contenidos de informática, los objetivos inicial
 Hemos conseguido programar varios algoritmos para visualizar distintos fractales, partiendo de los que se describieron en el capítulo \ref{chap:Julia-Mandelbrot}: los algoritmos \ref{alg:Julia} y \ref{alg:Mandelbrot}. A partir de ellos describimos en el capítulo \ref{chap:fractales-2D} cómo graficar fractales 2D utilizando WebGL. Seguidamente empezamos a codificar una aplicación que utilice ray-tracing para visualizar una escena 3D sencilla, para una vez completada implementar algoritmos de visualización de fractales con ray-tracing. Esta tarea fue muy compleja y costosa, prueba de ello es que tan solo los capítulos \ref{chap:ray-tracing} y \ref{chap:fractales-3D}, correspondientes a introducción al ray-tracing y a visualización de fractales 3D, ocupan aproximadamente 70 páginas. La bibliografía sobre esta materia es bastante escasa y en muchas ocasiones ambigua, además de la dificultad que supone depurar código shader, por lo que fue muy costoso completar esta tarea.
 
 Los objetivos relativos a la eficiencia en tiempo también se han logrado alcanzar. Aunque queda pendiente un análisis más profundo de la comparativa existente entre una ejecución de este código en GPU respecto al uso de una versión equivalente totalmente ejecutada en CPU, lo cierto es que con el código desarrollado es posible visualizar fractales 2D y 3D en tiempos del orden de milisegundos, los cuales son imposibles de conseguir con código ejecutado exclusivamente en la CPU.
+
+Con estos párrafos damos por finalizadas las secciones introductorias del proyecto, comenzando en las siguientes páginas con el contenido concreto del TFG.
