--- a/memoria/tex/resumen.tex
+++ b/memoria/tex/resumen.tex
@@ -1,7 +1,7 @@
 
 Es muy probable que a lo largo de su vida haya visto en internet, revistas o periódicos alguna imagen con patrones que se repiten hasta donde el ojo humano alcanza a ver, y con total seguridad ha tratado con estructuras tan naturales como un árbol, la hoja de un helecho y algunos tipos de verduras como la coliflor en las que la parte y el todo parecen tener una forma muy similar, fíjese por ejemplo en las imágenes \ref{fig:objetos} de esta memoria. Los fractales, desde un punto de vista matemático son figuras o imágenes que obedecen a patrones de repeticón y similaridad, y son los protagonistas de este TFG.
 
-No existe una clara definición de lo que es un fractal, pero muchas de las existentes y en especial la introducida por \textit{Benoit Mandelbrot}, el considerado padre de la geometría fractal, tienen en común dos rasgos: la autosimilaridad y la dimensión. La autosimilaridad es una propiedad que tiene un conjunto que está compuesto por pequeñas copias de sí mismo. Por ejemplo, las ramas de un árbol a su vez tienen forma de árboles más pequeños que el original. Sobre la dimensión, es más difícil abordarla de forma intuitiva, pero podemos afirmar que los fractales al tener formas muy complejas, aunque se puedan representar en dos o tres dimensiones realmente su dimensión puede incluso no ser un número entero, al contrario de lo que dictamina la intuición. Ayudados de ejemplos clásicos y como introducción a esta materia, ahondaremos en los distintos conceptos de autosimilaridad y dimensión fractal.
+No existe una clara definición de lo que es un fractal, pero muchas de las existentes y en especial la introducida por \textit{Benoit Mandelbrot}, el considerado padre de la geometría fractal, tienen en común dos rasgos: la autosimilaridad y la dimensión. La autosimilaridad es una propiedad que tiene un conjunto que está compuesto por copias reducidas de sí mismo. Por ejemplo, las ramas de un árbol a su vez tienen forma de árboles más pequeños que el original. Sobre la dimensión, es más difícil abordarla de forma intuitiva, pero podemos afirmar que los fractales al tener formas muy complejas, aunque se puedan representar en dos o tres dimensiones realmente su dimensión puede incluso no ser un número entero, al contrario de lo que dictamina la intuición. Ayudados de ejemplos clásicos y como introducción a esta materia, ahondaremos en los distintos conceptos de autosimilaridad y dimensión fractal.
 
 Una herramienta muy utilizada también en el mundo de los fractales es la iteración de procesos. De hecho, muchos de los fractales clásicos como el conjunto de Cantor (imagen \ref{fig:Cantor}) o el triángulo de Sierpinski (imagen \ref{fig:triangulo-Sierpinski}) se originan gracias a procesos iterativos sobre figuras como son un intervalo cerrado de $\R$ o un triángulo equilátero. Este es también el caso de los Sistemas de Funciones Iteradas, cuya aplicación reiterada nos ofrece bellos resultados. Además, si nos restringimos a las funciones complejas, la propia aplicación reiterada de una función compleja puede darnos figuras tan hermosas como enrevesadas. En este ámbito destacan los conocidos `conjuntos de Julia' o el `conjunto de Mandelbrot' (imágenes \ref{fig:julia-intro} y \ref{fig:mandelbrot-intro}), que es para muchos el objeto más complejo de la matemática. Lo sorprendente es que estos conjuntos son el resultado de iterar una función compleja tan simple como $P_c(z)=z^2+c$ para un $c\in\C$ fijo. 
 
