--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -1,5 +1,5 @@
 
-Desde la antiguedad, el ser humano siempre ha seguido procesos iterativos. Aunque normalmente la iteración en el sentido moderno se asocia a algoritmos, bucles o recursión, en realidad es un concepto ancestral. Las recetas de cocina, la recolección del cultivo, construcción de edificios, todas ellas son procesos que se basan en repetir operaciones sucesivamente una y otra vez. La iteración, y el tan ambiguo concepto del infinito matemático que ha atormentado las mentes de los pensadores desde los tiempos de Zenón hasta hace 120 años gracias a los trabajos del célebre matemático \textit{George Cantor} son los precursores de toda la teoría fractal que disponemos a día de hoy. La primera aproximación a lo que hoy llamamos fractales llegó con el descubrimiento de funciones que a pesar de ser continuas no admiten derivada, esto en los trabajos de \textit{Bernhard Riemann} y \textit{Karl Weierstrass} en la década de 1870, dando a luz a lo que en aquellos tiempos se conocían como ``monstruos matemáticos''.
+Desde la antiguedad, el ser humano siempre ha seguido procesos iterativos. Aunque normalmente la iteración en el sentido moderno se asocia a algoritmos, bucles o recursión, en realidad es un concepto ancestral. Las recetas de cocina, la recolección del cultivo, construcción de edificios, todas ellas son procesos que se basan en repetir operaciones sucesivamente una y otra vez. La iteración, y el tan ambiguo concepto del infinito matemático que ha atormentado las mentes de los pensadores desde los tiempos de Zenón hasta hace 120 años gracias a los trabajos del célebre matemático \textit{George Cantor} son los precursores de toda la teoría fractal de la que disponemos a día de hoy. La primera aproximación a lo que hoy llamamos fractales llegó con el descubrimiento de funciones que a pesar de ser continuas no admiten derivada, esto en los trabajos de \textit{Bernhard Riemann} y \textit{Karl Weierstrass} en la década de 1870, dando a luz a lo que en aquellos tiempos se conocían como ``monstruos matemáticos''.
 
 Unos 50 años después, allá por 1917, \textit{Gaston Julia} y \textit{Pierre Fatou}, con el objetivo del \textit{Grand Prix des Sciences mathematiques} que anunció la Academia Francesa de Ciencias publicaron independientemente trabajos sobre iteración de funciones racionales complejas. En 1918 Julia publicó un tratado extenso sobre el tema, al cual se le unió el año siguiente una trilogía de trabajos por parte de Fatou. Por su parte, el conocido matemático alemán \textit{Felix Hausdorff} publica en este mismo año un artículo sobre la dimensión posiblemente no entera de conjuntos \cite{Hausdorff1919}. 
 
@@ -50,21 +50,21 @@ Por su parte, para el desarrollo del producto software se han empleado intensame
 
 Otro aspecto deseable es el conocimiento o uso previo de alguna herramienta de rasterización y sus componentes, y en concreto OpenGL/WebGL. Específicamente, sería útil conocer el concepto de shader y su programación en un lenguaje específico para la GPU (`shading language'). Aunque estos detalles no son indispensables pues se explican estas utilidades y su uso en la propia memoria. 
 
-Para el desarrollo de la web intectativa se ha utilizado naturalmente HTML5 y CSS3 (ayudado también por el framework Bootstrap). Pero la mayor parte del código del software está escrito en JavaScript, ya que es utilizado para la gestión del DOM y de los eventos en el documento HTML. Además, como herramienta de visualización se ha utilizado WebGL, que precisamente utiliza JavaScript para su gestión, de manera que lo usamos como intermediario entre el documento HTML y la gestión dinámica de eventos, pero a su vez también lo utilizamos como lenguaje para interactuar con las herramientas de WebGL.
+Para el desarrollo de la web intectativa se ha utilizado naturalmente HTML5 y CSS3 (ayudado también por el framework Bootstrap). Pero la mayor parte del código del software está escrito en JavaScript (utilizando también la biblioteca jQuery) ya que es utilizado para la gestión del DOM y de los eventos en el documento HTML. Además, como herramienta de visualización se ha utilizado WebGL, que precisamente utiliza JavaScript para su gestión, de manera que lo usamos como intermediario entre el documento HTML y la gestión dinámica de eventos, pero a su vez también lo utilizamos como lenguaje para interactuar con las herramientas de WebGL.
 
 Se utiliza el lenguaje GLSL (GL Shader Language) para la programación de código destinado a ejecutarse en la GPU. A las componentes de este código se les denomina `shaders'. El uso de este lenguaje es intensivo, pero tiene una sintaxis muy similar a la de C, por lo que el lector no debe preocuparse si no ha tratado nunca con GLSL, ya que entre la propia documentación oficial y lo descrito aquí será sencillo entender todo el código shader.
 
 Para graficar escenas 3D hemos utilizado la técnica conocida como `ray-tracing', identificando cada objeto con una función distancia (SDF) y aplicando el algoritmo `sphere-tracing'. Con estos elementos se ha implementado en GLSL el shader necesario para graficar las escenas en las que se pueden observar fractales 3D.
 
-Partiendo de estas bases, comenzaremos esta memoria explicando de forma genérica e intuitiva el concepto de fractal, para posteriormente introducir importantes conceptos como autosimilaridad y distintos tipos de relación fractal. Seguidamente introduciremos la iteración de funciones complejas como herramienta para la generación de imágenes fractales mediante la coloración del plano complejo utilizando el método de Newton.
+Partiendo de estas bases, comenzaremos esta memoria explicando de forma genérica e intuitiva el concepto de fractal, para posteriormente introducir importantes conceptos como autosimilaridad y distintos tipos de dimensión fractal. Seguidamente introduciremos la iteración de funciones complejas como herramienta para la generación de imágenes fractales mediante la coloración del plano complejo utilizando el método de Newton.
 
 A continuación, y sin alejarnos de la iteración de funciones complejas, presentaremos la familia de funciones $P_c(z)=z^2+c$, con la cual aprenderemos a visualizar y a interpretar el significado de los conjuntos de Julia y Mandelbrot, muy conocidos en el ámbito de los fractales. También presentaremos algunas generalizaciones de estos conjuntos mediante el cambio en el exponente de $P_c$, iterando por tanto la función $P_{c,m}=z^m+c$, y mediante la iteración de funciones no polinómicas.
 
 Continuaremos nuestro camino introduciéndonos en la teoría de los sistemas de funciones iteradas, que se basan también en iterar funciones, pero esta vez sobre conjuntos de un espacio métrico completo, con especial interés en $\R^2$. Desarrollaremos una introducción a los mismos y demostraremos la convergencia de esta particular sucesión de iteradas a objetos de naturaleza fractal.
 
-Seguidamente introduciremos el uso de herramientas de rasterización con el objetivo de conseguir visualizar fractales tanto 2D y 3D. Describiremos conceptos genéricos de informática gráfica y APIs de rasterización para el que lo necesite y en particular introduciremos el uso y los componentes de una aplicación gráfica basada en WebGL. Tras esta breve introducción, modificaremos la estructura y programaremos el shader para visualizar conjuntos de Julia y Mandelbrot, estándar y generalizados, aprovechando la teoría que introdujimos en capítulos anteriores.
+Seguidamente introduciremos el uso de herramientas de rasterización con el objetivo de conseguir visualizar fractales tanto 2D y 3D. Describiremos conceptos genéricos de informática gráfica y APIs de rasterización para el que lo necesite y en particular introduciremos el uso y los componentes de una aplicación gráfica basada en WebGL. Tras esta breve introducción, explicaremos la planificación, presupuesto, análisis de requisitos y análisis de casos de uso del producto software que se desarrollará en los siguientes capítulos. Tras esto, modificaremos la estructura y programaremos el shader para visualizar conjuntos de Julia y Mandelbrot, estándar y generalizados, aprovechando la teoría que introdujimos en capítulos anteriores.
 
-Con los fractales en dos dimensiones ya bastante asimilados, es momento de dar el salto a las 3 dimensiones. Para ello, aprenderemos los fundamentos básicos del ray-tracing, con el objetivo primitivo de programar un programa ray-tracer que únicamente visualice una escena sencilla con varias esferas y un suelo con textura de ajedrez. Aplicaremos también un modelo de iluminación local para dotar de luces, sombras y realismo a la escena
+Con los fractales en dos dimensiones ya bastante asimilados, es momento de dar el salto a las 3 dimensiones. Para ello, aprenderemos los fundamentos básicos del ray-tracing, con el objetivo primitivo de programar un programa ray-tracer que únicamente visualice una escena sencilla con varias esferas y un suelo con textura de ajedrez. Aplicaremos también un modelo de iluminación local para dotar de luces, sombras y realismo a la escena.
 
 Una vez aprendidas las bases del ray-tracing, modificaremos el programa para visualizar fractales tridimensionales, aplicando el algoritmo `sphere-tracing' para obtener imágenes de conjuntos de Julia y Mandelbrot generalizados a tres dimensiones.
 
